# holo-rss-reader

./: .coverage  .gitignore  CLAUDE.md  LICENSE  README.md  SKILL.md  deploy_skill.sh  main.py  pyproject.toml
.agents/plugins/: marketplace.json
.github/workflows/: ci.yml  release.yml
deploy/: deploy_skill.sh
fixtures/: sample_gist.json  sample_opml.xml  sample_rss.xml
holo_rss_reader/: __init__.py  fetcher.py  gist.py  parser.py
plugins/holo-rss-reader/: index.js  openclaw.plugin.json  package.json
plugins/holo-rss-reader/.claude-plugin/: plugin.json
plugins/holo-rss-reader/.codex-plugin/: plugin.json
references/: config.md  output-samples.md  wechat.md
registry/: hermes.md  openclaw.md
scripts/: config.py  deploy_skill.sh  feeds.py  fetcher.py  gist.py  http_client.py  main.py  parser.py  rss.sh  store.py  wechat.py
skills/holo-rss-reader/: SKILL.md
skills/holo-rss-reader/references/: wechat.md
skills/holo-rss-reader/scripts/: config.py  exit_codes.py  feeds.py  fetcher.py  main.py  parser.py  requirements.txt  rss.sh  store.py  url_validator.py
src/holo_rss_reader_skills/: __init__.py  build.py  sync_plugin.py  validate.py
tests/: conftest.py  test_config_defaults.py  test_config_more.py  test_doctor.py  test_exit_codes.py  test_feeds.py  test_fetch_metrics.py  test_fetcher.py  test_fetcher_conditional.py  test_fetcher_errors.py  test_fetcher_more.py  test_fetcher_scale.py  test_gist.py  test_gist_more.py  test_http_client.py  test_main_cli.py  test_main_commands.py  test_main_dispatch_more.py  test_parser.py  test_parser_more.py  test_repository_layout.py  test_store_errors.py  test_store_index.py  test_store_more.py  test_url_validator.py  test_url_validator_more.py  test_wechat.py  test_wechat_commands.py
