[project]
name = "holo-rss-reader"
version = "0.1.0"
description = "Production-ready RSS/Atom reader for OpenClaw with Gist OPML import, concurrent fetch, daily digest, and full-article caching."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "feedparser>=6.0.12",
    "requests>=2.32.5",
    "defusedxml>=0.7.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "responses>=0.25.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".venv", ".uv-cache", ".tmp", "pytest-cache-files-*"]
