[project]
name = "holo-rss-reader"
version = "1.1.0"
description = "Production-ready RSS/Atom reader packaged as Agent Skills and local plugins."
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "feedparser>=6.0.12",
    "requests>=2.32.5",
    "defusedxml>=0.7.1",
]

[project.scripts]
holo-rss-build = "holo_rss_reader_skills.build:main"
holo-rss-sync-plugin = "holo_rss_reader_skills.sync_plugin:main"
holo-rss-validate = "holo_rss_reader_skills.validate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/holo_rss_reader_skills"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "responses>=0.25.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".venv", ".uv-cache", ".tmp", "pytest-cache-files-*"]
pythonpath = ["src"]
